# mcd-recurse

./: .gitmodules  CMakeLists.txt  README.md  config.h.in
src/: CMakeLists.txt  geom.cpp  geom.h  io.cpp  io.h  main.cpp  mcd.h  tools.h  triangle.h
